# vsmRoombaWoGui

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.30c7b64  localMap.cpp  localMap.hpp  logfilesaver.cpp  logfilesaver.hpp  logfilesaverpf.cpp  logfilesaverpf.hpp  main.cpp  particlefilter.cpp  particlefilter.h  roombaAgent.cpp  roombaAgent.hpp  roombaBehaviour.cpp  roombaBehaviour.hpp  roombaController.cpp  roombaController.hpp  roombaMovementManager.cpp  roombaMovementManager.hpp  uartTest.cpp  uartTest.h  uwbmsglistener.cpp  uwbmsglistener.hpp  vSMMessage.hpp  vsmRoombaWoGui.cbp
behaviours/: baseBehaviour.hpp  baseCommunicationBehaviour.cpp  baseCommunicationBehaviour.hpp  beaconListenerBehaviour.cpp  beaconListenerBehaviour.hpp  beaconMasterBehaviour.cpp  beaconMasterBehaviour.hpp  beaconOneBehaviour.cpp  beaconOneBehaviour.hpp  beaconTwoBehaviour.cpp  beaconTwoBehaviour.hpp  checkS3Behaviour.hpp  explorerListenerBehaviour.cpp  explorerListenerBehaviour.hpp  moveToTargetBehaviour.cpp  moveToTargetBehaviour.hpp  roleCheckingBehaviour.cpp  roleCheckingBehaviour.hpp  s1Behaviour.cpp  s1Behaviour.hpp  s2BaseBehaviour.cpp  s2BaseBehaviour.hpp  s2BeaconsBehaviour.cpp  s2BeaconsBehaviour.hpp  s2ExplorersBehaviour.cpp  s2ExplorersBehaviour.hpp  s3Behaviour.cpp  s3Behaviour.hpp  s4Behaviour.cpp  s4Behaviour.hpp
include/raspberry/: platform.h
protocols/: baseProtocol.cpp  baseProtocol.hpp  baseS1ManagementProtocol.cpp  baseS1ManagementProtocol.hpp  beaconManagementProtocol.cpp  beaconManagementProtocol.hpp  beaconManagementProtocolStatic.cpp  beaconManagementProtocolStatic.hpp  controlValueProtocol.cpp  controlValueProtocol.hpp  explorerManagementProtocol.cpp  explorerManagementProtocol.hpp  localisationProtocol.cpp  localisationProtocol.hpp  localisationProtocolpf.cpp  localisationProtocolpf.hpp  operationsManagementProtocol.cpp  operationsManagementProtocol.hpp  roleCheckingProtocol.cpp  roleCheckingProtocol.hpp  s1ExchangeProtocol.cpp  s1ExchangeProtocol.hpp  thirdBeaconFormationProtocol.cpp  thirdBeaconFormationProtocol.hpp  twoPointFormationProtocol.cpp  twoPointFormationProtocol.hpp
